src/objects/KS_Oferta_express__c.object
<CustomObject>
    <description>KAIZENSTEP. ACTIVO. Objeto para recoger las condiciones de obra comentadas. Paso previo a una oferta</description>
    <fields>
        <fullName>KS_Cliente_final__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente final</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Clientes finales</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ofertas express (Cliente final)</relationshipLabel>
        <relationshipName>Ofertas_express2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Destinatario_1__c</fullName>
        <label>Destinatario (1)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Destinatario</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Destinatario_2__c</fullName>
        <label>Destinatario (2)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Destinatario</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Destinatario_3__c</fullName>
        <label>Destinatario (3)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Destinatario</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Distribuidor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distribuidor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Distribuidores SAP, Distribuidores</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ofertas express</relationshipLabel>
        <relationshipName>Ofertas_express</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Dto_Cliente_final_1__c</fullName>
        <label>Dto. Cliente final (1)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_Cliente_final_2__c</fullName>
        <label>Dto. Cliente final (2)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_Cliente_final_3__c</fullName>
        <label>Dto. Cliente final (3)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_Cliente_final__c</fullName>
        <label>Dto. Cliente final</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_Instalador_1__c</fullName>
        <label>Dto. Instalador (1)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_Instalador_2__c</fullName>
        <label>Dto. Instalador (2)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_Instalador_3__c</fullName>
        <label>Dto. Instalador (3)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_Instalador__c</fullName>
        <label>Dto. Instalador</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_adicional_1_1__c</fullName>
        <label>Dto. adicional 1 (1)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_adicional_1_2__c</fullName>
        <label>Dto. adicional 1 (2)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_adicional_1_3__c</fullName>
        <label>Dto. adicional 1 (3)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_adicional_1__c</fullName>
        <label>Dto. adicional 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_adicional_2__c</fullName>
        <label>Dto. adicional 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_base_1_1__c</fullName>
        <label>Dto. base 1 (1)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_base_1_2__c</fullName>
        <label>Dto. base 1 (2)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_base_1_3__c</fullName>
        <label>Dto. base 1 (3)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_base_1__c</fullName>
        <label>Dto. base 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_base_2__c</fullName>
        <label>Dto. base 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_total__c</fullName>
        <label>Dto. Total</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Estado__c</fullName>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pendiente</fullName>
                    <default>true</default>
                    <label>Pendiente</label>
                </value>
                <value>
                    <fullName>Convertida</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Importe_bruto__c</fullName>
        <label>Importe bruto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Importe_clientefinal__c</fullName>
        <label>Importe neto Cliente final</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Importe_instalador__c</fullName>
        <label>Importe neto Instalador</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Importe_neto__c</fullName>
        <label>Importe neto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Importe_total_1__c</fullName>
        <label>Importe total (1)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Importe_total_2__c</fullName>
        <label>Importe total (2)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Importe_total_3__c</fullName>
        <label>Importe total (3)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Instalador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Instalador</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Instalador</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ofertas express (Instalador)</relationshipLabel>
        <relationshipName>Ofertas_express1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Margen__c</fullName>
        <label>Margen</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Material_sin_cargo_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Material sin cargo (1)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Material_sin_cargo_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Material sin cargo (2)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Material_sin_cargo_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Material sin cargo (3)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Prescrito_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prescrito (1)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Prescrito_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prescrito (2)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Prescrito_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prescrito (3)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Probabilidad_de_exito__c</fullName>
        <label>Probabilidad de éxito</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Tipo_de_condicion_1__c</fullName>
        <label>Tipo de condicion 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Condicion_de_Obra</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Tipo_de_condicion_2__c</fullName>
        <label>Tipo de condicion 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Condicion_de_Obra</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Tipo_de_condicion_3__c</fullName>
        <label>Tipo de condicion 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Condicion_de_Obra</valueSetName>
        </valueSet>
    </fields>
    <label>Oferta express</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>OFX - {000000}</displayFormat>
        <label>id OfertaX</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ofertas express</pluralLabel>
    <recordTypes>
        <fullName>KS_Simulacion</fullName>
        <active>true</active>
        <label>Simulación</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>